--- a/github/workflows/docker_build.yml
+++ b/github/workflows/docker_build.yml
@@ -1,41 +1,30 @@
-name: CI/CD Dpcker Workflow
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - mian
+    branches: [ "main" ]
+
 jobs:
-  build_and_test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build app
-        run: |
-          npm install
-          npm run build
-      - name: Run tests
-        run: |
-          npm test
-  build_and_push:
-    runs-on: ubuntu-latest
-    needs: build_and_test  
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3     
-       - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build Docker image
-        run: |
-          docker build -t alexis/myapp:${{ github.sha }} .
-      - name: Push Docker image
-        run: |
-          docker push alexis/myapp:${{ github.sha }}
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+    - name: Push Docker image to DockerHub
+      run: docker push my-image-name:$(date +%s)
