--- a/github/workflows/docker_build.yml
+++ b/github/workflows/docker_build.yml
@@ -6,19 +6,22 @@ on:
       - main
   pull_request:
     branches:
-      - mian
+      - main
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        
       - name: Build app
         run: |
           npm install
           npm run build
+
       - name: Run tests
         run: |
           npm test
@@ -28,7 +31,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3     
-       - name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
