--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Build the Docker image
       run: 
-        docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        docker build . --file Dockerfile --tag my-image-name:${{ github.sha }}
         docker images 
 
     - name: Push Docker image to DockerHub
-      run: docker push my-image-name:$(date +%s)
+      run: docker push my-image-name:${{ github.sha }}
