--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,11 +23,15 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Verify Dockerfile existence
+      run: |
+        ls -l Dockerfile 
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag my-image-name:${{ github.sha }}
-        docker images
-
+        echo "Building the Docker image..." 
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/my-image-name:${{ github.sha }} .
+        docker images  
     - name: Push Docker image to DockerHub
       run: |
+        echo "Pushing Docker image to DockerHub..."
         docker push ${{ secrets.DOCKER_USERNAME }}/my-image-name:${{ github.sha }}
