--- a/github/workflows/docker_build.yml
+++ b/github/workflows/docker_build.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches:
-      - mian
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +24,7 @@ jobs:
           npm test
   build_and_push:
     runs-on: ubuntu-latest
-    needs: build_and_test  
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3     
