--- a/github/workflows/docker_build.yml
+++ b/github/workflows/docker_build.yml
@@ -2,42 +2,42 @@ name: Docker Image CI
 
 on:
   push:
-    branches: 
-      - main
-
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build app
-        run: |
-          npm install
-          npm run build
-      - name: Run tests
-        run: |
-          npm test
-  build_and_push:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3     
-       - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build Docker image
-        run: |
-          docker build -t alexis/myapp:${{ github.sha }} .
-      - name: Push Docker image
-        run: |
-          docker push alexis/myapp:${{ github.sha }}
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Run tests
+      run: |
+        npm test
+
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Verify Dockerfile existence
+      run: |
+        ls -l Dockerfile 
+    - name: Build the Docker image
+      run: |
+        echo "Building the Docker image..." 
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/my-image-name:${{ github.sha }} .
+        docker images  
+    - name: Push Docker image to DockerHub
+      run: |
+        echo "Pushing Docker image to DockerHub..."
+        docker push ${{ secrets.DOCKER_USERNAME }}/my-image-name:${{ github.sha }}
+
+        
